BuildHughes/translation-tool/inputs/source_meta/objects/HSvc_LabelValue__c.object
<CustomObject>
    <fields>
        <fullName>HSvc_AccTrxnReason__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Transaction Reason</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>HSvc_AccTrxnReason__c.HSvc_ActiveFormula__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>HSvc_AccTrxnReason__c</referenceTo>
        <relationshipLabel>Label Value</relationshipLabel>
        <relationshipName>Label_Vaue</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HSvc_ActiveFormula__c</fullName>
        <formula>AND(
  HSvc_Expiry_Date__c &gt;= TODAY(),
  HSvc_Effective_Date__c &lt;= TODAY()

)</formula>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HSvc_Effective_Date__c</fullName>
        <label>Effective Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>HSvc_Expiry_Date__c</fullName>
        <label>Expiry Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>HSvc_Is_Value_Editable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Value Editable?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HSvc_Value__c</fullName>
        <externalId>true</externalId>
        <label>Value</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hsvc_LabelPanama__c</fullName>
        <label>Label(Panama)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hsvc_NumberValue__c</fullName>
        <formula>IF( ISNUMBER( HSvc_Value__c ) , VALUE ( HSvc_Value__c ) , 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Number Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Hsvc_ValuePanama__c</fullName>
        <label>Value (Panama)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Label_Formula__c</fullName>
        <description>This field shows the label based on the user language</description>
        <formula>CASE($Label.Current_Language_Key,&apos;es_CO&apos;, IF(ISBLANK(Label_Spanish__c ), Name ,Label_Spanish__c) ,&apos;es_PA&apos;, IF(ISBLANK(Hsvc_LabelPanama__c ), Name ,Hsvc_LabelPanama__c) ,&apos;es_PE&apos;, IF(ISBLANK(Label_esPE__c ), Name ,Label_esPE__c) ,&apos;es_EC&apos;, IF(ISBLANK(Label_esEC__c ), Name ,Label_esEC__c) ,&apos;es_CL&apos;, IF(ISBLANK(Label_esCL__c ), Name ,Label_esCL__c) ,  &apos;es_AR&apos;, IF(ISBLANK(Label_esAR__c), Name ,Label_esAR__c) ,Name)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Label</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Label_Portuguese__c</fullName>
        <description>This field is to store the Portuguese value</description>
        <label>Label (Portuguese)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Label_Spanish__c</fullName>
        <label>Label(Colombia)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
	<fields>
        <fullName>Label_esAR__c</fullName>
        <label>Label(Argentina)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Label_esCL__c</fullName>
        <label>Label(Chile)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Label_esEC__c</fullName>
        <label>Label(Ecuador)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Label_esPE__c</fullName>
        <label>Label(Peru)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Value_Formula__c</fullName>
        <formula>CASE($Label.Current_Language_Key,&apos;es_CO&apos;, IF(ISBLANK(Value_es_CO__c ), HSvc_Value__c ,Value_es_CO__c) ,&apos;es_PA&apos;, IF(ISBLANK(Hsvc_ValuePanama__c ), HSvc_Value__c ,Hsvc_ValuePanama__c) ,&apos;es_PE&apos;, IF(ISBLANK(Value_esPE__c ), HSvc_Value__c ,Value_esPE__c) ,&apos;es_EC&apos;, IF(ISBLANK(Value_esEC__c ), HSvc_Value__c ,Value_esEC__c) ,&apos;es_CL&apos;, IF(ISBLANK(Value_esCL__c), HSvc_Value__c ,Value_esCL__c) ,&apos;es_AR&apos;, IF(ISBLANK(Value_esAR__c), HSvc_Value__c ,Value_esAR__c) ,HSvc_Value__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Value</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Value_Portuguese__c</fullName>
        <label>Value (Portguese)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
	<fields>
        <fullName>Value_esAR__c</fullName>
        <label>Value (Argentina)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Value_esCL__c</fullName>
        <label>Value (Chlie)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Value_esEC__c</fullName>
        <label>Value (Ecuador)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Value_esPE__c</fullName>
        <label>Value (Peru)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Value_es_CO__c</fullName>
        <label>Value (Colombia)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Label Value</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Label_Formula__c</columns>
        <columns>Label_esCL__c</columns>
        <columns>Label_Spanish__c</columns>
        <columns>Label_esEC__c</columns>
        <columns>Hsvc_LabelPanama__c</columns>
        <columns>Label_esPE__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Label</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Label Value</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>ExpiryDateCannotBeSetInThePast</fullName>
        <active>true</active>
        <errorConditionFormula>OR( HSvc_Expiry_Date__c &lt; TODAY(), HSvc_Expiry_Date__c&lt; HSvc_Effective_Date__c)</errorConditionFormula>
        <errorDisplayField>HSvc_Expiry_Date__c</errorDisplayField>
        <errorMessage>Expiry Date cannot be set in past and cannot be less than the effective date</errorMessage>
    </validationRules>
</CustomObject>